--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_recipedetailactivity_list">Items</string>
     <string name="title_recipedetailactivity_detail">RecipeDetailActivity Detail</string>
+    <string name="appwidget_text">Select a recipe</string>
+    <string name="add_widget">Add widget</string>
 </resources>
